working on the dark mode...still need to fix close button inside app

--- a/websie/static/style.css
+++ b/websie/static/style.css
@@ -2,13 +2,13 @@
 body {
     font-family: 'Courier Prime', monospace;
     /* background-image: linear-gradient(to top, #dfe9f3 0%, white 100%); */
-    background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+    /* background-image: linear-gradient(to top, #dfe9f3 0%, white 100%); */
     /* height: 100vh; */
 }
 
 .form-control {
     background-color: transparent;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .form-control:focus {
@@ -25,7 +25,6 @@ body {
         backdrop-filter: blur(10px);
     }
 }
-
 
 
 
